--- a/prep.ipynb
+++ b/prep.ipynb
@@ -44,7 +44,7 @@
     }
    ],
    "source": [
-    "# overview\n",
+    "# overview (datatypes/null values)\n",
     "df.info()"
    ]
   },
@@ -726,6 +726,7 @@
     }
    ],
    "source": [
+    "# count of deposit by type\n",
     "df[df.value > 0].groupby('description').description.count()"
    ]
   },
@@ -746,6 +747,7 @@
     }
    ],
    "source": [
+    "# count of zero values\n",
     "df[df.value == 0].groupby('description').value.sum()"
    ]
   },
@@ -792,6 +794,7 @@
     }
    ],
    "source": [
+    "# count of withdrawals by type\n",
     "df[df.value < 0].groupby('description').description.count()"
    ]
   },
@@ -1220,7 +1223,7 @@
     }
    ],
    "source": [
-    "# 3 monthly sum of withdrawals\n",
+    "# monthly sum of withdrawals\n",
     "df[df.value < 0].resample(rule='M', on='date')['value'].sum()"
    ]
   },
@@ -1254,7 +1257,7 @@
     }
    ],
    "source": [
-    "# 3 monthly sum of deposits\n",
+    "# monthly sum of deposits\n",
     "df[df.value > 0].resample(rule='M', on='date')['value'].sum()"
    ]
   },
