--- a/prep.ipynb
+++ b/prep.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -190,7 +190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -200,7 +200,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -210,7 +210,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -219,7 +219,7 @@
        "Index(['date', 'description', 'value'], dtype='object')"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -230,7 +230,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -240,7 +240,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -299,7 +299,7 @@
        "221  31.12.2020  Bargeldauszahlung  -13,00"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -310,7 +310,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -321,7 +321,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -331,7 +331,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
@@ -390,7 +390,7 @@
        "2  2020-01-01           Miete  -822.28"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 48,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -401,7 +401,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
@@ -427,7 +427,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
@@ -436,7 +436,7 @@
        "array([10,  6], dtype=int64)"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 50,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -448,7 +448,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
@@ -493,7 +493,7 @@
        "165  -10-01       Miete -822.28"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 51,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -505,7 +505,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -515,7 +515,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
@@ -560,7 +560,7 @@
        "165  2020-10-01       Miete -822.28"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 53,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -571,7 +571,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -581,7 +581,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [
     {
@@ -640,7 +640,7 @@
        "2 2020-01-01           Miete  -822.28"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 55,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -651,7 +651,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [
     {
@@ -677,7 +677,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [
     {
@@ -693,18 +693,19 @@
        "Name: value, dtype: float64"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 57,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "# sum of deposits by type\n",
     "df[df.value > 0].groupby('description').value.sum()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [
     {
@@ -720,19 +721,19 @@
        "Name: description, dtype: int64"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 58,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# count of deposit by type\n",
+    "# count of deposits by type\n",
     "df[df.value > 0].groupby('description').description.count()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [
     {
@@ -741,7 +742,7 @@
        "Series([], Name: value, dtype: float64)"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 59,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -753,7 +754,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [
     {
@@ -788,7 +789,7 @@
        "Name: description, dtype: int64"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 60,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -800,7 +801,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [
     {
@@ -922,7 +923,7 @@
        "214 2020-12-21         DSL -34.99"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 61,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -933,7 +934,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -942,7 +943,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [
     {
@@ -987,7 +988,7 @@
        "181 2020-10-25         DSL -34.99"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 63,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -998,7 +999,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [
     {
@@ -1057,7 +1058,7 @@
        "2 2020-01-01           Miete  -822.28"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 64,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1068,7 +1069,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1079,7 +1080,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [
     {
@@ -1138,7 +1139,7 @@
        "2 2020-01-02  Bargeldauszahlung  -22.00"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 66,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1149,7 +1150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [
     {
@@ -1183,7 +1184,7 @@
        "Name: value, dtype: float64"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 67,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1195,7 +1196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [
     {
@@ -1217,7 +1218,7 @@
        "Freq: M, Name: value, dtype: float64"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 68,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1229,7 +1230,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [
     {
@@ -1251,7 +1252,7 @@
        "Freq: M, Name: value, dtype: float64"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 69,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1263,7 +1264,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [
     {
@@ -1272,7 +1273,7 @@
        "29014.4"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 70,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1284,7 +1285,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [
     {
@@ -1293,7 +1294,7 @@
        "-30543.43"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 71,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1305,7 +1306,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [
     {
