push it, push it, push it

--- a/prep.ipynb
+++ b/prep.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -190,7 +190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -200,7 +200,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -210,7 +210,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -219,7 +219,7 @@
        "Index(['date', 'description', 'value'], dtype='object')"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -230,7 +230,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -240,7 +240,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -299,7 +299,7 @@
        "221  31.12.2020  Bargeldauszahlung  -13,00"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -310,7 +310,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -321,7 +321,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -331,7 +331,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -390,7 +390,7 @@
        "2  2020-01-01           Miete  -822.28"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -401,7 +401,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -427,7 +427,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -436,7 +436,7 @@
        "array([10,  6], dtype=int64)"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -448,7 +448,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -493,7 +493,7 @@
        "165  -10-01       Miete -822.28"
       ]
      },
-     "execution_count": 51,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -505,7 +505,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -515,7 +515,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -560,7 +560,7 @@
        "165  2020-10-01       Miete -822.28"
       ]
      },
-     "execution_count": 53,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -571,7 +571,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -581,7 +581,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -640,7 +640,7 @@
        "2 2020-01-01           Miete  -822.28"
       ]
      },
-     "execution_count": 55,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -651,7 +651,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -677,7 +677,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -693,7 +693,7 @@
        "Name: value, dtype: float64"
       ]
      },
-     "execution_count": 57,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -705,7 +705,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -721,7 +721,7 @@
        "Name: description, dtype: int64"
       ]
      },
-     "execution_count": 58,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -733,7 +733,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -742,7 +742,7 @@
        "Series([], Name: value, dtype: float64)"
       ]
      },
-     "execution_count": 59,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -754,7 +754,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -789,7 +789,7 @@
        "Name: description, dtype: int64"
       ]
      },
-     "execution_count": 60,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -801,7 +801,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -923,7 +923,7 @@
        "214 2020-12-21         DSL -34.99"
       ]
      },
-     "execution_count": 61,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -934,7 +934,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -943,7 +943,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -988,7 +988,7 @@
        "181 2020-10-25         DSL -34.99"
       ]
      },
-     "execution_count": 63,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -999,7 +999,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -1058,7 +1058,7 @@
        "2 2020-01-01           Miete  -822.28"
       ]
      },
-     "execution_count": 64,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1069,7 +1069,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1080,7 +1080,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -1139,7 +1139,7 @@
        "2 2020-01-02  Bargeldauszahlung  -22.00"
       ]
      },
-     "execution_count": 66,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1150,7 +1150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -1184,7 +1184,7 @@
        "Name: value, dtype: float64"
       ]
      },
-     "execution_count": 67,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1196,7 +1196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -1218,7 +1218,7 @@
        "Freq: M, Name: value, dtype: float64"
       ]
      },
-     "execution_count": 68,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1230,7 +1230,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -1252,7 +1252,7 @@
        "Freq: M, Name: value, dtype: float64"
       ]
      },
-     "execution_count": 69,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1264,7 +1264,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -1273,7 +1273,7 @@
        "29014.4"
       ]
      },
-     "execution_count": 70,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1285,7 +1285,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -1294,7 +1294,7 @@
        "-30543.43"
       ]
      },
-     "execution_count": 71,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1306,7 +1306,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -1321,6 +1321,123 @@
     "# year's total balance\n",
     "x = df[df.value > 0].value.sum() + df[df.value < 0].value.sum()\n",
     "print(x.round(2))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# exporting to csv\n",
+    "from os.path import expanduser\n",
+    "from pathlib import Path\n",
+    "\n",
+    "def get_name(variable):\n",
+    "    for name in globals():\n",
+    "        if id(globals()[name]) == id(variable):\n",
+    "            return name\n",
+    "    for name in locals():\n",
+    "        if id(locals()[name]) == id(variable):\n",
+    "            return name\n",
+    "    return None\n",
+    "\n",
+    "def save(df):\n",
+    "    \"\"\"Saves a dataframe to the Downloads folder\"\"\"\n",
+    "    home = Path(expanduser(\"~\"))\n",
+    "    path = home / \"Downloads\"\n",
+    "    df_name = get_name(df) + \".csv\"\n",
+    "    file_name = path / df_name\n",
+    "    df.to_csv(file_name, index=False)\n",
+    "    # print(file_name) "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#save(df)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(220, 3)"
+      ]
+     },
+     "execution_count": 39,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sql_functions import get_engine\n",
+    "import psycopg2 "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "schema = 'public' \n",
+    "engine = get_engine() "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#print(engine)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The output_01 table was exported successfully.\n"
+     ]
+    }
+   ],
+   "source": [
+    "table_name = 'output_01'\n",
+    "if engine!=None:\n",
+    "    try:\n",
+    "        df.to_sql(name=table_name, \n",
+    "                        con=engine, \n",
+    "                        if_exists='replace', \n",
+    "                        schema=schema, \n",
+    "                        index=False, \n",
+    "                        chunksize=5000, \n",
+    "                        method='multi') \n",
+    "        print(f\"The {table_name} table was exported successfully.\")\n",
+    "    except (Exception, psycopg2.DatabaseError) as error:\n",
+    "        print(error)\n",
+    "        engine = None"
    ]
   }
  ],
