--- a/prep.ipynb
+++ b/prep.ipynb
@@ -1289,7 +1289,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -1323,7 +1323,7 @@
        "Name: value, dtype: float64"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1335,7 +1335,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -1357,7 +1357,7 @@
        "Freq: M, Name: value, dtype: float64"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1365,6 +1365,141 @@
    "source": [
     "# monthly sum of withdrawals\n",
     "df[df.value < 0].resample(rule='M', on='date')['value'].sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>date</th>\n",
+       "      <th>description</th>\n",
+       "      <th>value</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>19</th>\n",
+       "      <td>2020-01-30</td>\n",
+       "      <td>Gehalt</td>\n",
+       "      <td>2264.37</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>33</th>\n",
+       "      <td>2020-02-29</td>\n",
+       "      <td>Gehalt</td>\n",
+       "      <td>2264.37</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>47</th>\n",
+       "      <td>2020-03-30</td>\n",
+       "      <td>Gehalt</td>\n",
+       "      <td>2264.37</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>70</th>\n",
+       "      <td>2020-04-30</td>\n",
+       "      <td>Gehalt</td>\n",
+       "      <td>2264.37</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>89</th>\n",
+       "      <td>2020-05-30</td>\n",
+       "      <td>Gehalt</td>\n",
+       "      <td>2264.37</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>109</th>\n",
+       "      <td>2020-06-30</td>\n",
+       "      <td>Gehalt</td>\n",
+       "      <td>2264.37</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>133</th>\n",
+       "      <td>2020-07-30</td>\n",
+       "      <td>Gehalt</td>\n",
+       "      <td>2264.37</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>145</th>\n",
+       "      <td>2020-08-30</td>\n",
+       "      <td>Gehalt</td>\n",
+       "      <td>2264.37</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>161</th>\n",
+       "      <td>2020-09-30</td>\n",
+       "      <td>Gehalt</td>\n",
+       "      <td>2514.15</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>181</th>\n",
+       "      <td>2020-10-30</td>\n",
+       "      <td>Gehalt</td>\n",
+       "      <td>2514.15</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>199</th>\n",
+       "      <td>2020-11-30</td>\n",
+       "      <td>Gehalt</td>\n",
+       "      <td>2514.15</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>216</th>\n",
+       "      <td>2020-12-30</td>\n",
+       "      <td>Gehalt</td>\n",
+       "      <td>2514.15</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "          date description    value\n",
+       "19  2020-01-30      Gehalt  2264.37\n",
+       "33  2020-02-29      Gehalt  2264.37\n",
+       "47  2020-03-30      Gehalt  2264.37\n",
+       "70  2020-04-30      Gehalt  2264.37\n",
+       "89  2020-05-30      Gehalt  2264.37\n",
+       "109 2020-06-30      Gehalt  2264.37\n",
+       "133 2020-07-30      Gehalt  2264.37\n",
+       "145 2020-08-30      Gehalt  2264.37\n",
+       "161 2020-09-30      Gehalt  2514.15\n",
+       "181 2020-10-30      Gehalt  2514.15\n",
+       "199 2020-11-30      Gehalt  2514.15\n",
+       "216 2020-12-30      Gehalt  2514.15"
+      ]
+     },
+     "execution_count": 38,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# show all 'Gehalt'\n",
+    "mask = df.description == \"Gehalt\"\n",
+    "df[mask]"
    ]
   },
   {
